# stats-for-mols

./: README.md  main.py  pyproject.toml  setup.py  tutorial.ipynb  tutorial_classification.ipynb
stats_for_mols/: __init__.py
stats_for_mols/performance/: __init__.py  metrics.py
stats_for_mols/sampling/: __init__.py  split_methods.py  splitting_strategies.py  strategy_selector.py
stats_for_mols/statistics/: __init__.py  assumptions.py  engine.py  nonparametric.py  parametric.py
stats_for_mols/visualization/: __init__.py  diagnostics.py  metrics_plot.py  plots.py
